# gfwlist

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: publish.yml  test.yml
gfwlist-python/: Cargo.toml  README.md  gfwlist.pyi  pyproject.toml
gfwlist-python/src/: lib.rs
gfwlist-rust/: Cargo.toml  README.md
gfwlist-rust/src/: lib.rs
src/: lib.rs
