[project]
name = "gfwlist"
description = "A GFW list parser and matcher."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
license = "MIT"
authors = [
    {name = "Shigma", email = "shigma10826@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/shigma/gfwlist"
Repository = "https://github.com/shigma/gfwlist.git"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
