[package]
name = "gfwlist"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = [
    "Shigma <shigma10826@gmail.com>",
]
description = "A fast GFW list parser and matcher."
repository = "https://github.com/shigma/gfwlist"
documentation = "https://docs.rs/gfwlist"

[dependencies]
aho-corasick = "1.1.3"
regex = "1.11.1"
url = "2.5.4"
